// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfileGeneralInformationComponent matches snapshot 1`] = `
<div
  className="current-user-top current-user-section-container"
>
  <div
    className="section-padded-inner-container"
  >
    <div
      className="avatar-group"
    >
      <Status
        hideText={false}
      />
      <Avatar
        className="dashboard-user-profile-picture"
        display_name="John"
        firstName="John"
        initials="JD"
        lastName="Doe"
        onClick={[Function]}
        small={false}
      />
    </div>
    <EditProfile />
    <div
      className="name-group"
    >
      <PositionInformation
        className="current-user-name"
        icon=""
        small={true}
        title="Doe, John"
      />
      <InformationDataPoint
        className="skill-code-data-point-container skill-code-data-point-container-skill"
        content={
          <SkillCodeList
            skillCodes={
              Array [
                Object {
                  "code": "6218",
                  "cone": null,
                  "description": "CONSTRUCTION ENGINEERING",
                  "id": 63,
                },
                Object {
                  "code": "6211",
                  "cone": null,
                  "description": "COMPUTER SCIENCE",
                  "id": 40,
                },
              ]
            }
          />
        }
        sideBySide={false}
        title=""
        titleOnBottom={false}
      />
    </div>
  </div>
</div>
`;

exports[`UserProfileGeneralInformationComponent matches snapshot when showEditLink is true 1`] = `
<div
  className="current-user-top current-user-section-container"
>
  <div
    className="section-padded-inner-container"
  >
    <div
      className="avatar-group"
    >
      <Status
        hideText={false}
      />
      <Avatar
        className="dashboard-user-profile-picture"
        display_name="John"
        firstName="John"
        initials="JD"
        lastName="Doe"
        onClick={[Function]}
        small={false}
      />
    </div>
    <EditProfile />
    <div
      className="name-group"
    >
      <PositionInformation
        className="current-user-name"
        icon=""
        small={true}
        title="Doe, John"
      />
      <InformationDataPoint
        className="skill-code-data-point-container skill-code-data-point-container-skill"
        content={
          <SkillCodeList
            skillCodes={
              Array [
                Object {
                  "code": "6218",
                  "cone": null,
                  "description": "CONSTRUCTION ENGINEERING",
                  "id": 63,
                },
                Object {
                  "code": "6211",
                  "cone": null,
                  "description": "COMPUTER SCIENCE",
                  "id": 40,
                },
              ]
            }
          />
        }
        sideBySide={false}
        title=""
        titleOnBottom={false}
      />
    </div>
  </div>
</div>
`;

exports[`UserProfileGeneralInformationComponent matches snapshot when useGroup is true 1`] = `
<div
  className="current-user-top current-user-section-container"
>
  <div
    className="section-padded-inner-container"
  >
    <div
      className="avatar-group"
    >
      <Status
        hideText={false}
      />
      <Avatar
        className="dashboard-user-profile-picture"
        display_name="John"
        firstName="John"
        initials="JD"
        lastName="Doe"
        onClick={[Function]}
        small={false}
      />
    </div>
    <EditProfile />
    <div
      className="name-group"
    >
      <PositionInformation
        className="current-user-name"
        icon=""
        small={true}
        title="Doe, John"
      />
      <Connect(StaticDevContent)>
        <InformationDataPoint
          className="skill-code-data-point-container skill-code-data-point-container-gen-spec"
          content="Generalist • F2"
          sideBySide={false}
          title=""
          titleOnBottom={false}
        />
      </Connect(StaticDevContent)>
    </div>
  </div>
</div>
`;
